RESOLVED FIXED283135
Localization is not working correctly in the Web Process on Catalyst
https://bugs.webkit.org/show_bug.cgi?id=283135
Summary Localization is not working correctly in the Web Process on Catalyst
Lily Spiniolas
Reported 2024-11-14 14:46:58 PST
For example, multiple date form controls display their values localized for English, regardless of the user's language and region settings.
Attachments
Lily Spiniolas
Comment 1 2024-11-14 14:53:45 PST
Lily Spiniolas
Comment 2 2024-11-14 16:31:26 PST
EWS
Comment 3 2024-11-14 21:00:55 PST
Committed 286629@main (488f8501bcdc): <https://commits.webkit.org/286629@main> Reviewed commits have been landed. Closing PR #36663 and removing active labels.
EWS
Comment 4 2024-12-11 13:09:19 PST
Committed 283286.582@safari-7620-branch (16a0f9086648): <https://commits.webkit.org/283286.582@safari-7620-branch> Reviewed commits have been landed. Closing PR #2397 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.