Localization is not working correctly in the Web Process on Catalyst https://bugs.webkit.org/show_bug.cgi?id=283135 rdar://128854487

Reviewed by Abrar Rahman Protyasha and Per Arne Vollan.

Restore xpc_connection_send_bootstrap for Catalyst since it's not using ExtensionKit.

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::finishLaunchingProcess):

Canonical link: https://commits.webkit.org/286629@main